--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-venv
+/venv
 
 # testing
 /coverage
@@ -19,7 +19,10 @@ venv
 .env.test.local
 .env.production.local
 __pycache__
+.vscode
+.idea
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
