--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/flask/static/react/
-/flask/templates/react/
+/app/static/react/
+/app/templates/react/
