updated readme & tasks

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "cd api && ../venv/bin/flask run --no-debugger",
+    "start-api": "python app/Main.py",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test-api": "cd api && ../venv/bin/flask test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "setup": "mkdir app/config"
   },
   "eslintConfig": {
     "extends": [
