--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
-blinker==1.4
-click==8.0.3
 Flask==2.0.2
 Flask-Mail==0.9.1
+Flask-JWT-Extended==4.3.1
 Flask-WTF==1.0.0
+WTForms==3.0.1
+blinker==1.4
+click==8.0.3
 gunicorn==20.1.0
 itsdangerous==2.0.1
-Jinja2==3.0.3
 MarkupSafe==2.0.1
 passlib==1.7.4
 psycopg2-binary==2.9.3
 Werkzeug==2.0.2
-WTForms==3.0.1
+python-dotenv==0.19.2
+pep517==0.12.0
+pip-tools==6.4.0
+PyJWT==2.3.0
+tomli==2.0.0
