--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-twemoji": "^0.4.0",
+    "react-twemoji-17": "^0.4.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
