Register routes and stuff relating to it debuged, should send an email when enabled (shows the body in the console)

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ yarn-error.log*
 /app/static/react
 /app/templates/react
 /app/config/sql.json
-# /app/config/email.json
+/app/config/email_local.json
 
