Reworked SQL, Tokens, immplemented email verification (with requesting emails, these links being one time use)

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,6 @@ yarn-error.log*
 /app/templates/react
 /app/config/sql.json
 /app/config/email_local.json
+/app/sql/first_launch/executed/before_launch/*.*
+/app/sql/first_launch/executed/after_launch/*.*
 
