--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,5 @@
-SECRET_KEY='va_tLgio5_XvHQ1MTXqn_geISuIBxkctGw3Fmz7cwutYAxq0Xl7twJQAXl£XShE3T8JjWPQCXbSgTXdoV39VMmiSt9ybQ'
+SECRET_KEY=va_tLgio5_XvHQ1MTXqn_geISuIBxkctGw3Fmz7cwutYAxq0Xl7twJQAXl£XShE3T8JjWPQCXbSgTXdoV39VMmiSt9ybQ
+NAME=SkillQuest
 DATABASE_USER=postgres
-DATABASE_PASSWORD=wcfqcNNgp4vk
-DATABASE_NAME=CS261
+DATABASE_PASSWORD=
+DATABASE_NAME=cs261
