project now use npm typings for react-twemoji. also now aliases react-twemoji-17 as just react-twemoji to make it work. https://github.com/DefinitelyTyped/DefinitelyTyped/pull/58881

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-twemoji": "^0.4.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-twemoji-17": "^0.4.0",
+    "react-twemoji": "npm:react-twemoji-17@^0.4.0",
     "rxjs": "^7.5.4",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
