made registration flow work with frontend

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ SECRET_KEY=va_tLgio5_XvHQ1MTXqn_geISuIBxkctGw3Fmz7cwutYAxq0Xl7twJQAXl£XShE3T8Jj
 PEPER=B1a5KEbbMThr2Klsat2XUyZWXegayfq9
 HOST_URL=https://www.skillquest.com
 NAME=SkillQuest
+SQL_HOST=localhost
+SQL_PORT=5432
+SQL_DB_NAME=cs261
+SQL_USER=sam
+SQL_PASSWORD=sam
