--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5001",
+  "proxy": "http://127.0.0.1:5001/",
   "devDependencies": {
     "react-test-renderer": "^17.0.2"
   }
